Reimpliment tap functionality for this branch

--- a/client/layout.html
+++ b/client/layout.html
@@ -1,4 +1,15 @@
-<head></head>
+<head>
+  <title>shake:shake demo</title>
+</head>
 <body>
+  <h1>Meteor shake test</h1>
+  <p>Running on: {{client}}</p>
+
+  <button>Toggle watching for shakes</button>
+  Watching: {{watching}}
+  <hr/>
+
+  <div id="shakes">{{shakes}}</div>
+
   {{>Excuses}}
 </body>
